Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11917

enum/set command-line options aren't respecting max-* settings

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 5.5(EOL), 10.0(EOL), 10.1(EOL), 10.2(EOL)
    • 10.2.16
    • Variables
    • None
    • 10.2.10, 10.2.11, 10.2.12, 10.2.14

    Description

      numerical sysvars can be limited by their max-* settings. but enum/set options are ignoring max-* limits.

      Attachments

        Issue Links

          Activity

            People

              holyfoot Alexey Botchkov
              serg Sergei Golubchik
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 4d 1h 40m
                  4d 1h 40m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.