MDEV-11917 enum/set command-line options aren't respecting max-* settings.